--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
             <div class="col"><button class="btn btn-outline-secondary" type="button" value="0"><span class="expression">0</span></button></div>                
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="index1.js"></script>
 </body>
 </html>
